--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/study
 spring.datasource.username=root
 spring.datasource.password=qwer
+
+
+mybatis.mapper-locations=classpath:mappers/*.xml
